# Codex-Pool

./: .gitignore  .gitleaks.toml  AGENTS.md  Cargo.toml  README.md  RELEASING.md  docker-compose.personal.yml
.github/: release.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
crates/codex-pool-core/: Cargo.toml
docker/: .env.personal.example  personal.runtime.Dockerfile  rust-runtime.Dockerfile
docs/: core-pages-redesign-designer-brief-2026-03-18.md  editions-and-migration.md
docs/plans/: 2026-02-27-100k-oauth-vault-active-pool-blueprint.md  2026-02-28-upstream-ops-health-probing.md  2026-03-06-ws-billing-failover-hardening-design.md  2026-03-06-ws-billing-failover-hardening.md  2026-03-08-model-live-success-writeback.md  2026-03-11-accounts-email-layout-design.md  2026-03-11-accounts-email-layout.md  2026-03-11-accounts-refresh-unification-design.md  2026-03-11-accounts-refresh-unification.md  2026-03-11-oauth-probe-page.md  2026-03-11-oauth-profile-claims-design.md  2026-03-11-oauth-profile-claims.md  2026-03-17-frontend-page-archetypes-design.md  2026-03-17-frontend-page-archetypes.md  2026-03-17-frontend-redesign-design.md  (+3 more)
frontend/: package-lock.json  package.json
scripts/: run_personal_dev.sh  verify_embedded_single_binary_frontend.sh
services/data-plane/: Cargo.toml
services/data-plane/src/: auth.rs  config.rs  event.rs  lib.rs  outbound_proxy_runtime.rs  proxy.rs  router.rs  routing_cache.rs  snapshot.rs  test_support.rs  upstream_health.rs
services/data-plane/src/app/: bootstrap.rs  internal_debug.rs
services/data-plane/src/event/: http_sink.rs
services/data-plane/src/proxy/: anthropic_api.rs  anthropic_translator.rs  billing_stream.rs  entry.rs  error_learning.rs  request_utils.rs  responses_api.rs  ws_utils.rs
services/data-plane/tests/: anthropic_edges.rs  auth_middleware.rs  auth_validator.rs  billing_compact_pricing.rs  compat_contract.rs  compatibility.rs  compatibility_ws.rs  dependency_boundaries.rs  e2e_proxy_snapshot.rs  event_sink.rs  integration.rs  internal_auth_whoami.rs  internal_debug_account_by_id.rs  internal_debug_accounts.rs  internal_debug_clear_unhealthy.rs  internal_debug_mark_healthy.rs  internal_debug_mark_unhealthy.rs  internal_debug_state.rs  internal_debug_unhealthy_accounts.rs  internal_metrics.rs  liveness_api.rs  outbound_proxy_runtime.rs  rate_limit_compat.rs  readiness_api.rs  snapshot_sync.rs  stream_consistency.rs
services/data-plane/tests/cases/: rate_limit_compat.rs
services/data-plane/tests/internal_debug_auth_cache/: base_and_auth_cache.rs
services/data-plane/tests/support/: mod.rs
(+190 files in other folders)
