[package]
name = "data-plane"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
autotests = false

[[test]]
name = "integration"
path = "tests/integration.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
codex-pool-core = { path = "../../crates/codex-pool-core" }
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
base64 = "0.22"
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-rustls = "0.26"
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
redis.workspace = true
toml.workspace = true
zstd.workspace = true
regex.workspace = true
rustls-native-certs = "0.8"

[dev-dependencies]
assert-json-diff.workspace = true
wiremock.workspace = true
